--- a/.github/workflows/canary_build.yml
+++ b/.github/workflows/canary_build.yml
@@ -34,23 +34,7 @@ jobs:
       run: | 
         export PATH=$PATH:node_modules/.bin
         yarn
-    - name: build
+    - name: test
       run: |
         export PATH=$PATH:node_modules/.bin
-        yarn build
-    # - name: test
-    #   run: |
-    #     export PATH=$PATH:node_modules/.bin
-    #     ember test
-    # - name: release
-    #   uses: justincy/github-action-npm-release@2.0.2
-    #   id: release
-    # - name: print release output
-    #   if: ${{ steps.release.outputs.released == 'true' }}
-    #   run: echo Release ID ${{ steps.release.outputs.release_id }}
-    # - name: publish package
-    #   if: ${{ steps.release.outputs.released == 'true' }}
-    #   env:
-    #     NPM_AUTH_TOKEN: ${{ secrets.AUTOMATION_TOKEN }}
-    #   run: |
-    #     yarn publish
+        yarn test
