chore: remove unused dependency

--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   "private": false,
   "scripts": {
     "dev": "yarn build:watch",
-    "build": "npx rimraf dist && npx typescript@~4.2 -p tsconfig.build.json",
+    "build": "npx rimraf dist && npx typescript@~4.5 -p tsconfig.build.json",
     "build:main": "tsc -p tsconfig.build.json",
     "build:watch": "tsc -p tsconfig.build.json --watch",
     "lint": "eslint . --ext .ts",
@@ -26,14 +26,14 @@
     "test": "qunit --require ts-node/register 'test/**/*-test.ts'"
   },
   "dependencies": {
-    "node-fetch": "^2.0.0",
-    "typescript": "^4.5.5"
+    "node-fetch": "^2.0.0"
   },
   "devDependencies": {
     "@types/node": "^17.0.14",
     "@types/qunit": "^2.11.3",
     "nock": "^13.2.2",
     "qunit": "^2.17.2",
-    "ts-node": "^10.4.0"
+    "ts-node": "^10.4.0",
+    "typescript": "~4.5"
   }
 }
