fix node-fetch typings

--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   },
   "devDependencies": {
     "@types/node": "^17.0.14",
+    "@types/node-fetch": "^2.6.2",
     "@types/qunit": "^2.11.3",
     "nock": "^13.2.2",
     "qunit": "^2.17.2",
