--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -1,7 +1,7 @@
 {
   "extends": "./tsconfig.json",
   "compilerOptions": {
-    "types": ["node"]
+    "types": ["node", "node-fetch"]
   },
   "exclude": ["node_modules/**", "src/__tests__/**", "src/__mocks__/**"]
 }
