--- a/package.json
+++ b/package.json
@@ -18,23 +18,25 @@
   "private": false,
   "scripts": {
     "dev": "yarn build:watch",
-    "build": "npx rimraf dist && npx --package=typescript@~4.5 -c 'tsc -p tsconfig.build.json'",
+    "build": "rimraf dist && tsc -p tsconfig.build.json",
     "build:main": "tsc -p tsconfig.build.json",
     "build:watch": "tsc -p tsconfig.build.json --watch",
     "lint": "eslint . --ext .ts",
-    "postinstall": "yarn build",
     "test": "qunit --require ts-node/register 'test/**/*-test.ts'"
   },
   "dependencies": {
-    "node-fetch": "^2.0.0",
-		"@types/node-fetch": "^2.6.2"
+    "@companion-module/base": "~1.6.0",
+    "node-fetch": "^2.7.0"
   },
   "devDependencies": {
-    "@types/node": "^17.0.14",
-    "@types/qunit": "^2.11.3",
-    "nock": "^13.2.2",
-    "qunit": "^2.17.2",
-    "ts-node": "^10.4.0",
+    "@companion-module/tools": "^1.4.1",
+    "@types/node": "^18.18.4",
+    "@types/node-fetch": "^2.6.9",
+    "@types/qunit": "^2.19.9",
+    "nock": "^13.4.0",
+    "qunit": "^2.20.0",
+    "rimraf": "^5.0.5",
+    "ts-node": "^10.9.2",
     "typescript": "~4.5"
   }
 }
