--- a/.github/workflows/canary_build.yml
+++ b/.github/workflows/canary_build.yml
@@ -3,38 +3,38 @@ on: push
 
 env:
   CI: true
-    
+
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/setup-node@v1
-      with:
-        node-version: '14.17.0'
-        always-auth: true
-    - uses: actions/checkout@v2
-      with:
-        fetch-depth: 0
-    - uses: actions/cache@v2
-      env:
-        cache-name: cache-node-modules
-      with:
-        path: ./node_modules
-        key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('**/package-lock.json') }}
-        restore-keys: |
-          ${{ runner.os }}-build-${{ env.cache-name }}-
-          ${{ runner.os }}-build-
-          ${{ runner.os }}-
-    - name: list versions
-      run: |
-        node --version
-        npm --version
-        yarn --version
-    - name: install dependencies
-      run: | 
-        export PATH=$PATH:node_modules/.bin
-        yarn
-    - name: test
-      run: |
-        export PATH=$PATH:node_modules/.bin
-        yarn test
+      - uses: actions/setup-node@v3
+        with:
+          node-version: 18.x
+          always-auth: true
+      - uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
+      - uses: actions/cache@v3
+        env:
+          cache-name: cache-node-modules
+        with:
+          path: ./node_modules
+          key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-build-${{ env.cache-name }}-
+            ${{ runner.os }}-build-
+            ${{ runner.os }}-
+      - name: list versions
+        run: |
+          node --version
+          npm --version
+          yarn --version
+      - name: install dependencies
+        run: |
+          export PATH=$PATH:node_modules/.bin
+          yarn
+      - name: test
+        run: |
+          export PATH=$PATH:node_modules/.bin
+          yarn test
