--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "barco-clickshare",
-  "version": "1.0.4",
+  "version": "2.0.0",
   "main": "dist/index.js",
   "repository": "git@github.com:bitfocus/companion-module-barco-clickshare.git",
   "license": "MIT",
@@ -13,6 +13,7 @@
     "lint": "eslint . --ext .ts",
     "test": "qunit --require ts-node/register 'test/**/*-test.ts'"
   },
+	"prettier": "@companion-module/tools/.prettierrc.json",
   "dependencies": {
     "@companion-module/base": "~1.6.0",
     "node-fetch": "^2.7.0"
